# codehealth-analyzer

./: LICENSE  README.md
.devcontainer/: devcontainer.json
dashboard/: index.html
docs/: index.html  report.json
techdebt-tracker/: Cargo.toml
techdebt-tracker/dashboard/: index.html
techdebt-tracker/src/: main.rs
