[package]
name = "codehealth-analyzer"   # <-- rename here if you want new project name
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
syn = { version = "2.0", features = ["full", "visit"] }

# add these new dependencies:
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
